[package]
name = "na_nbt"
version = "0.1.0"
edition = "2024"
description = "High-performance NBT (Named Binary Tag) library with zero-copy parsing and serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zijinshanren/na_nbt"
documentation = "https://docs.rs/na_nbt"
readme = "README.md"
keywords = ["nbt", "minecraft", "binary", "serialization", "serde"]
categories = ["encoding", "game-development", "parser-implementations"]
rust-version = "1.87"

[features]
default = []
nightly = ["simd_cesu8/nightly"]

[dependencies]
simd_cesu8 = "1.1"
bytes = "1.11"
zerocopy = "0.8"
serde = "1.0"

[dev-dependencies]
criterion = "0.8"
serde = { version = "1.0", features = ["derive"] }
