[package]
name = "na_nbt"
version = "0.1.3"
edition = "2024"
authors = ["zijinshanren"]
description = "High-performance NBT (Named Binary Tag) library with zero-copy parsing and serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zijinshanren/na_nbt"
documentation = "https://docs.rs/na_nbt"
readme = "README.md"
keywords = ["nbt", "minecraft", "binary", "serialization", "serde"]
categories = ["encoding", "game-development", "parser-implementations"]
rust-version = "1.87"

[features]
default = ["serde", "shared", "i128"]
nightly = ["simd_cesu8/nightly"]
# Enable serde serialization/deserialization support
serde = ["dep:serde"]
# Enable SharedValue with Arc ownership (requires bytes crate)
shared = ["dep:bytes"]
# Enable i128/u128 serialization support (requires Rust 1.26+)
i128 = []

[dependencies]
simd_cesu8 = "1.1"
zerocopy = "0.8"
# Optional: for serde support
serde = { version = "1.0", optional = true }
# Optional: for SharedValue (Arc-based zero-copy)
bytes = { version = "1.11", optional = true }

[dev-dependencies]
criterion = "0.8"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
