[package]
name = "na_nbt-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
na_nbt = { path = "..", features = ["i128", "serde", "shared", "nightly"] }
bytes = "1.11"
criterion = "0.8"
mimalloc = "0.1"
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }

simdnbt = "0.9.0"
graphite_binary = "0.1.0"
valence_nbt = { version = "0.8.0", features = ["binary"] }
fastnbt = "2.6.0"
azalea-nbt = { git = "https://github.com/azalea-rs/azalea", rev = "84e036ce3752ecf57904b0f5aff1f33d43e95a32" }
hematite-nbt = { version = "0.5.2", default-features = false }
shen-nbt5 = "0.4.6"
crab_nbt = "0.2.11"
ussr-nbt = "0.2.1"

[profile.bench]
lto = true

[[bench]]
harness = false
name = "compare"
