[package]
name = "na_nbt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = "*"
honggfuzz = "0.5"
libfuzzer-sys = "0.4"
bytes = "1.11"
serde = { version = "1", features = ["derive"] }

[dependencies.na_nbt]
path = ".."

[[bin]]
name = "libfuzzer"
path = "fuzz_targets/libfuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hongg"
path = "fuzz_targets/hongg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "afl"
path = "fuzz_targets/afl.rs"
test = false
doc = false
bench = false
